# anses-ca

./: Makefile  README.md  extract_data.py  package-lock.json  package.json  pyproject.toml  tsconfig.paths.json
public/: index.html  manifest.json
src/: App.css  App.tsx
src/components/: FilterByName.tsx  FilterTabs.tsx  MainDataGrid.tsx  Readme.tsx
src/data/: rows.json
