[tool.poetry]
name = "anses-ca"
version = "0.1.0"
description = ""
authors = ["Yann Beauxis <pro@yannbeauxis.net>"]
readme = "README.md"
packages = [{include = "anses_ca"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
